--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,8 @@ import Layout from '../layouts/Layout.astro';
 import PostCard from '../components/PostCard.astro';
 import AuthorCard from '../components/AuthorCard.astro';
 
-// 设置为服务器渲染模式
-export const prerender = false;
+// 设置为预渲染模式
+export const prerender = true;
 
 // 定义条目类型
 type BlogEntry = CollectionEntry<'blog'>;
